fix spacing for small screen sizes

--- a/css/added_styles.css
+++ b/css/added_styles.css
@@ -30,6 +30,10 @@
     border-radius: 30px;
 }
 
+.skill-icons {
+    max-width: 90%;
+}
+
 
 .link-icons {
     border-radius: 20px;
