--- a/css/styles.css
+++ b/css/styles.css
@@ -11462,7 +11462,7 @@ html {
   cursor: pointer;
   position: relative;
   display: block;
-  max-width: 25rem;
+  max-width: 30rem;
   border-radius: 0.5rem;
   overflow: hidden;
 }
